fix: PaymentEditor / Filter checked, Set overflow: scroll #324

--- a/client/src/components/Asset/Editor/PaymentEditor.module.css
+++ b/client/src/components/Asset/Editor/PaymentEditor.module.css
@@ -6,7 +6,8 @@
 }
 
 .list {
-  height: 50vh;
+  height: 45vh;
+  overflow: scroll;
 }
 
 .data {
